# mini

./: .gitignore  ABOUT-ASI  CMakeLists.txt  Makefile  README.markdown  asarg.c  asarg.h  build.bat  eval-[mini-simple].c  getdelim.c  getdelim.h  main.c  main.cpp  mini.c  mini.h  strtok_r.c  strtok_r.h  tcp.c  tpm-control  util.c
